# packages/cactus-plugin-ledger-connector-besu/src/main/json/openapi.json
@@ -30,7 +30,86 @@
         }
     ],
     "components": {
-        "schemas": {
+        "schemas": { 
+            "EvmBlock":{
+                "type":"object",
+                "properties":{
+                    "number":{
+                        "type":"number"
+                    },
+                    "hash":{
+                        "type":"string"
+                    },
+                    "parentHash":{
+                        "type":"string"
+                    },
+                    "nonce":{
+                        "type":"string"
+                    },
+                    "sha3Uncles":{
+                        "type":"string"
+                    },
+                    "logsBloom":{
+                        "type":"string"
+                    },
+                    "transactionsRoot":{
+                        "type":"string"
+                    },
+                    "stateRoot":{
+                        "type":"string"
+                    },
+                    "miner":{
+                        "type":"string"
+                    },
+                    "difficulty":{
+                        "type":"number"
+                    },
+                    "totalDifficulty":{
+                        "type":"number"
+                    },
+                    "extraData":{
+                        "type":"string"
+                    },
+                    "size":{
+                        "type":"number"
+                    },
+                    "gasLimit":{
+                        "type":"number"
+                    },
+                    "gasUsed":{
+                        "type":"number"
+                    },
+                    "timestamp":{
+                    },
+                    "transactions":{
+                        "type":"array",
+                        "items":{}
+                    },
+                    "uncles":{
+                        "type":"array",
+                        "items":{}
+                    }
+                }
+            },
+            "GetBlockV1Response": {
+                "type": "object",
+                "required": [
+                    "block"                    
+                ],
+                "properties": {
+                    "block": {
+                        "$ref":"#/components/schemas/EvmBlock"
+                    }
+
+                }
+            },
+            "GetBlockV1Request": {
+                "required": ["blockHashOrBlockNumber"],
+                "type": "object",
+                "properties": {
+                "blockHashOrBlockNumber":{}
+                }
+            },
             "WatchBlocksV1": {
                 "type": "string",
                 "enum": [
@@ -758,6 +837,40 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/DeployContractSolidityBytecodeV1Response"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-besu/get-block": {
+            "post": {
+                "x-hyperledger-cactus": {
+                    "http": {
+                        "verbLowerCase": "post",
+                        "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-besu/get-block"
+                    }
+                },
+                "operationId": "getBlockV1",
+                "summary": "Returns a block matching the block",
+                "parameters": [],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GetBlockV1Request"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetBlockV1Response"
                                 }
                             }
                         }
